2009-08-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSCategories.m:
	* Source/Additions/GSCompatibility.m:
	Move -fullPath to correct place to build on OSX

2009-08-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([-string]) was returning proxy to
	mutable string ... bad if calling code does not expect it.

2009-08-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURL.h:
	* Headers/Additions/GNUstepBase/GSCategories.h:
	* Source/NSURL.m:
	* Source/Additions/GSCategories.m:
	Add new -fulPath method to do what -path used to do, because for OSX
	compatibility the -path method now returns a path without any
	trailing slash, making it impossible to reconsitute a URL string
	from its individual parts :-(
	* Source/GSHTTPURLHandle.m:
	* Source/NSURLProtocol.m:
	Use the new -fullPath method to build the request line sent to the
	remote web server.

2009-08-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Version: bump to 1.19.2
	* Documentation/news.texi: update
	* Documentation/ReleaseNotes.gsdoc: update
	* Source/DocMakefile: Avoid warning about WINAPI
	* Source/NSURLDownload.m: Documentation cleanups
	* Source/NSFileManager.m: ditto
	* Source/Additions/GSCategories.m: ditto
	* Source/Additions/GSMime.m: ditto
	* Source/NSURLConnection.m: ditto
	* Headers/Foundation/NSTimeZone.h: ditto
	* Headers/Foundation/NSURLDownload.h: ditto
	Make 1.19.2 release

2009-08-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m:
	* Source/GSString.m:
	* Headers/Foundation/NSString.h:
	Tweak boolValue behavior to better match OSX and document exact
	behavior.

2009-08-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/GSFileHandle.m: Fix for write in background on windows
	if a write is not already in progress, do it immediately because
	winsock won't tell us when we can write.  Also, improve the test to
	see if a handle is a socket, as the previous code was not working for