@@ -1,3 +1,7 @@
+2009-08-30 David Chisnall <csdavec@swan.ac.uk>
+
+	* Headers/Foundation/NSObject.h: Added NSDicardableContent protocol from
+	Snow Leopard.
 2009-08-27 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/Additions/GSCategories.m:
